# termacs-core

./: .gitmodules  CMakeLists.txt  README.md  termacs.md
.github/workflows/: ci.yml
backends/tvision/: tvision_backend.cpp
cabi/: cabi.cpp  termacs.map
include/termacs/: application.hpp  backend.hpp  cell.hpp  geometry.hpp  handle.hpp  headless_backend.hpp  input.hpp  signal.hpp  sizing.hpp  style.hpp  termacs.hpp  theme.hpp  tvision_backend.hpp  widget.hpp
include/termacs/c/: termacs.h
src/: application.cpp  cell.cpp  core.cpp  internal.hpp  text_buffer.cpp  text_buffer.hpp  theme.cpp  widget.cpp
tests/c-smoke/: smoke.c
tests/cpp/: demo_test.cpp  edit_test.cpp  librope_smoke.cpp  snapshot_test.cpp  style_test.cpp  textbuffer_test.cpp  tvterm_smoke.cpp  widgets_test.cpp
